Complete the demo flow. React first call login service to retrieve JWT token. React then call demo service by adding the bearer token in the API call.